--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.6.0",
-    "@google/genai": "^1.33.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
+    "recharts": "2.12.7",
+    "@google/genai": "0.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "lucide-react": "0.454.0",
     "xlsx": "0.18.5",
     "pdfjs-dist": "3.11.174",
     "html2canvas": "1.4.1",
